// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/FileUploadOverlay should match snapshot when file upload is showing with no overlay type 1`] = `
<div
  className="file-overlay hidden"
>
  <div
    className="overlay__indent"
  >
    <div
      className="overlay__circle"
    >
      <img
        alt="Files"
        className="overlay__files"
        src={null}
      />
      <span>
        <LocalizedIcon
          className="fa fa-upload"
          title={
            Object {
              "defaultMessage": "Upload Icon",
              "id": "generic_icons.upload",
            }
          }
        />
        <MemoizedFormattedMessage
          defaultMessage="Drop a file to upload it."
          id="upload_overlay.info"
        />
      </span>
      <img
        alt="Logo"
        className="overlay__logo"
        src={null}
      />
    </div>
  </div>
</div>
`;

exports[`components/FileUploadOverlay should match snapshot when file upload is showing with overlay type of center 1`] = `
<div
  className="file-overlay hidden center-file-overlay"
>
  <div
    className="overlay__indent"
  >
    <div
      className="overlay__circle"
    >
      <img
        alt="Files"
        className="overlay__files"
        src={null}
      />
      <span>
        <LocalizedIcon
          className="fa fa-upload"
          title={
            Object {
              "defaultMessage": "Upload Icon",
              "id": "generic_icons.upload",
            }
          }
        />
        <MemoizedFormattedMessage
          defaultMessage="Drop a file to upload it."
          id="upload_overlay.info"
        />
      </span>
      <img
        alt="Logo"
        className="overlay__logo"
        src={null}
      />
    </div>
  </div>
</div>
`;

exports[`components/FileUploadOverlay should match snapshot when file upload is showing with overlay type of right 1`] = `
<div
  className="file-overlay hidden right-file-overlay"
>
  <div
    className="overlay__indent"
  >
    <div
      className="overlay__circle"
    >
      <img
        alt="Files"
        className="overlay__files"
        src={null}
      />
      <span>
        <LocalizedIcon
          className="fa fa-upload"
          title={
            Object {
              "defaultMessage": "Upload Icon",
              "id": "generic_icons.upload",
            }
          }
        />
        <MemoizedFormattedMessage
          defaultMessage="Drop a file to upload it."
          id="upload_overlay.info"
        />
      </span>
      <img
        alt="Logo"
        className="overlay__logo"
        src={null}
      />
    </div>
  </div>
</div>
`;
